src/objects/Purchase_Order__c/fields/Cost_Price_Analyst_Commnets__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Analyst_Commnets__c</fullName>
    <description>Make sure your comments are current and reflect the current status of the package.  This must be short, crisp, and to the point.  Status needs to include the date you entered the comment and the most recent comment needs to go in front of previous comments. For example &quot;3/4-RFQ sent to supplier due 3/6.  2/29-collecting data for kickoff meeting.&quot;</description>
    <label>Cost/Price Analyst Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>