src/objects/Purchase_Order__c/fields/Cost_Price_Analyst_Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Analyst_Date_Assigned__c</fullName>
    <label>Cost/Price Analyst Date Assigned</label>
    <type>Date</type>
</CustomField>