src/objects/Purchase_Order__c/fields/Request_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_2__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>