src/objects/Purchase_Order__c/fields/Submitted_toRequestor__c.field-meta.xml
<CustomField>
    <fullName>Submitted_toRequestor__c</fullName>
    <description>Date the complete package was submitted to Pricing (see &quot;Completed Sent to Pricing&quot; field in Analysis Status).</description>
    <label>Submitted to Requestor</label>
    <type>Date</type>
</CustomField>