src/objects/Purchase_Order__c/fields/Supplier_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Sent_Date__c</fullName>
    <description>Date the RFQ was sent to the supplier(s).</description>
    <label>Supplier Request Date</label>
    <type>Date</type>
</CustomField>