src/objects/Purchase_Order__c/recordTypes/PO_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>PO_Support_Request</fullName>
    <active>true</active>
    <label>PO Support Request</label>
</RecordType>