src/objects/Purchase_Order__c/validationRules/Purchase_Order_digit_requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Order_digit_requirement</fullName>
    <active>true</active>
    <description>purchase order require 10 digits</description>
    <errorConditionFormula>OR(
NOT(ISNUMBER(  PO_Number__c )),
LEN( PO_Number__c ) &lt;&gt; 10
)</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>PO Number has a 10 digit requirement</errorMessage>
</ValidationRule>