src/objects/Purchase_Order__c/validationRules/Request_Date_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_Date_Restriction</fullName>
    <active>false</active>
    <description>Cannot change, Date the requestor create the PO Support Request</description>
    <errorConditionFormula>ISCHANGED( Request_Date__c ) &amp;&amp; TEXT(PRIORVALUE( Request_Date__c )) != &apos;&apos;</errorConditionFormula>
    <errorMessage>Cannot change Date of PO Support Request</errorMessage>
</ValidationRule>