src/objects/Purchase_Order__c/validationRules/Submitted_to_Requestor_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_to_Requestor_required</fullName>
    <active>true</active>
    <description>Submitted to Requestor required if Status is completed</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &quot;Completed&quot;),
 ISBLANK( Submitted_toRequestor__c ))</errorConditionFormula>
    <errorDisplayField>Submitted_toRequestor__c</errorDisplayField>
    <errorMessage>Submitted to Requestor required if Status is completed</errorMessage>
</ValidationRule>