src/objects/Purchase_Order__c/listViews/Purchase_Order_List_View.listView-meta.xml
<ListView>
    <fullName>Purchase_Order_List_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Purchase Order List View</label>
</ListView>